<resources>
    <string name="app_name">Swayam</string>
    <string name="activity_notification">Swayam</string>
    <string name="tag_line">Employee self service</string>
    <string name="msg_default_wait">Please Wait…</string>
    <string name="msg_no_internet_connectivity">No internet connection</string>
    <string name="exception_not_found">Something went wrong</string>
    <string name="unkonw_host_exception">Sorry! Unable to connect to the server</string>
    <string name="notification_channel_id_default">NotifyMe</string>
    <string name="notification_channel_name_default">NotifyMe Alerts</string>
    <string name="hint_employee_id">Employee Id</string>
    <string name="btn_submit">Submit</string>
    <string name="msg_error_emp_id">Please enter employee Id</string>
    <string name="btn_ok">Ok</string>
    <string name="hint_otp">OTP</string>
    <string name="msg_otp_note_sub_text">OTP has been sent successfully to\n</string>
    <string name="msg_otp_error">OTP should not be empty</string>
    <string name="label_for">For</string>
    <string name="lbl_last_sync_on">Last Sync On :</string>
    <string name="menu_item_about">About</string>
    <string name="video_play_error">Unable to play video</string>
    <string name="label_open_image">Open Image</string>
    <string name="label_open_video">Play Video</string>
    <string name="activity_video_player">Video Player</string>
    <string name="activity_image_preview">Image Viewer</string>
    <string name="message_text_copied">Text copied</string>
    <string name="error_pdf_viewer_not_installed">You need to install PDF Viewer</string>
    <string name="lbl_employee_id">Employee Id</string>
    <string name="nav_title_notification">Notification</string>
    <string name="nav_title_user">Me</string>
    <string name="btn_lbl_punching_slip">Punching Slip</string>
    <string name="btn_lbl_check_out">Check-Out</string>
    <string name="btn_lbl_apply_for_leave">Apply Leave</string>
    <string name="btn_lbl_attendance">Attendance</string>
    <string name="btn_lbl_rescan">Rescan</string>
    <string name="activity_title_check_in">Check-In</string>
    <string name="check_out">Check Out</string>
    <string name="btn_lbl_lunch">Lunch</string>
    <string name="btn_lbl_official_out">Official Out</string>
    <string name="btn_lbl_day_end">Day End</string>
    <string name="invalid_barcode_scan">Scan valid barcode</string>
    <string name="day_end">Your are successfully checkout</string>
    <string name="lunch_out">Your are successfully check out for lunch</string>
    <string name="official_out">Your are successfully checkout for official work</string>
    <string name="shift_not_select_error">Please select your shift</string>
    <string name="activity_leave_list">Leave Requests</string>
    <string name="lbl_leave_type">Leave</string>
    <string name="lbl_leave_for">Session</string>
    <string name="lbl_reason">Reason</string>
    <string name="msg_otp_resend">OTP has been sent successfully.</string>
    <string name="btn_lbl_attachment">Add Medical certificate</string>
    <string name="sl_certificate_not_available">Medical certificate is required for SL above 3 days.</string>
    <string name="lbl_punching_slip_date">Punching Slip Date</string>
    <string name="lbl_miss_punch">Miss Punch Time</string>
    <string name="cb_in_time">In Time</string>
    <string name="cb_out_time">Out Time</string>
    <string name="btn_lbl_check_in">Check In</string>
    <string name="btn_lbl__apply_for_leave">Apply For Leave</string>
    <string name="btn_lbl_submit_punching_slip">Submit Punching Slip</string>
    <string name="msg_punching_slip_created">Your punching slip has been successfully submitted.</string>
    <string name="lbl_in_time">In Time</string>
    <string name="lbl_out_time">Out Time</string>
    <string name="lbl_status_pending">Pending</string>
    <string name="lbl_status_cancelled">Rejected</string>
    <string name="lbl_status_verify">Approved</string>
    <string name="activity_punching_slip">Punching Slip</string>
    <string name="lbl_overtime_date">Over Time Date</string>
    <string name="lbl_hours">Hours</string>
    <string name="hint_over_time">HH.MM</string>
    <string name="lbl_overtime_reason">Over Time Reason</string>
    <string name="btn_lbl_over_time">Add Overtime</string>
    <string name="error_ot_reason_empty">Please add reason for overtime.</string>
    <string name="error_ot_hr_empty">Please enter your over time hours.</string>
    <string name="error_ot_invalid_hr">Please enter valid hours.</string>
    <string name="msg_ot_added">Over time has been added successfully.</string>
    <string name="lbl_ot_hr">Over Time Hours</string>
    <string name="activity_overtime">Over Time</string>
    <string name="lbl_ot_intentive">Intensive Hours</string>
    <string name="hint_ot_reason">"Over time reason "</string>
    <string name="lbl_sch_from">Date From</string>
    <string name="lbl_sch_from_shift">Current Shift</string>
    <string name="lbl_sch_to">Date To</string>
    <string name="lbl_sch_to_shift">To Shift</string>
    <string name="lbl_shift_change_reason">Shift Change Reason</string>
    <string name="hint_shift_reason">Shift change reason</string>
    <string name="btn_lbl_shift_change">Request For Shift Change</string>
    <string name="msg_shift_changed">Shift changed request has been submited successfully</string>
    <string name="lbl_scr_list_item">Change Shift From :</string>
    <string name="lbl_to">To</string>
    <string name="btn_home_lbl_shift_change">Shift Change</string>
    <string name="activity_shift_change">Shift Change</string>
    <string name="from_shift_not_select_error">Select your changing shift.</string>
    <string name="to_shift_not_select_error">Select your new shift</string>
    <string name="lbl_co_date">CO Date</string>
    <string name="lbl_co_for">Credit CO For</string>
    <string name="btn_lbl_add_co">Credit CO</string>
    <string name="msg_co_added">CO has been added successfully</string>
    <string name="lbl_add_co_for">Add Co for</string>
    <string name="lbl_full_day">Full Day</string>
    <string name="lbl_first_half">First Half</string>
    <string name="lbl_co_half_day">Half Day</string>
    <string name="lbl_second_half">Second Half</string>
    <string name="activity_co">CO</string>
    <string name="error_shift_reason_empty">Please enter shift change reason</string>
    <string name="error_in_time">Please select in time.</string>
    <string name="error_out_time">Please select out time.</string>
    <string name="lbl_misspunch_reason">Miss Punch Reason</string>
    <string name="hint_misspunch_reason">Miss punch reason</string>
    <string name="error_mispunch_reason_empty">Please enter miss punch reason</string>
    <string name="lbl_leave_from">From</string>
    <string name="lbl_leave_to">To</string>
    <string name="error_mispunch_reason_not_selected">Please select miss punch reason</string>
    <string name="error_co_reason_not_selected">Please select reason for adding co</string>
    <string name="error_co_reason_empty">Please add reason for co.</string>
    <string name="error_ot_reason_not_selected">Please select over time reason</string>
    <string name="error_shift_change_reason_not_selected">Please select reason for shift change.</string>
    <string name="error_leave_reason_not_selected">Please select reason for leave</string>
    <string name="error_leave_reason_empty">Please add reason for leave.</string>
    <string name="title_logout">Logout</string>
    <string name="msg_logout">Are you sure, do you want to logout from application?</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_lbl_add_miss_punch">Add Punching Slip</string>
    <string name="lbl_min">Minute</string>
    <string name="lbl_rb_english">English</string>
    <string name="lbl_rb_marathi">मराठी</string>
    <string name="lbl_change_your_language">Change Your Language</string>
    <string name="btn_txt_change_language">Change Language</string>
    <string name="nav_change_lng">Change language</string>
    <string name="title_leave_for">Leave for %1$s days</string>
    <string name="msg_multiple_days_leave">You have applied for %1$s day leave from %2$s to %3$s</string>
    <string name="msg_single_day_leave">You have applied leave on %1$s for %2$s leave</string>
    <string name="btn_lbl_leave_confirm">Correct</string>
    <string name="btn_lbl_leave_confirm_wrong">Wrong</string>
    <string name="title_leave_half_day">Leave</string>
    <string name="error_session_not_selected">Please select session</string>
    <string name="error_select_leave">Please select leave type.</string>
    <string name="lbl_leave_period">Leave Period :</string>
    <string name="lbl_leave_days">Total Days :</string>
    <string name="days">%1$s Days</string>
    <string name="lbl_leave_req_days">Days</string>
    <string name="lbl_leave_balance">Leave Balance</string>
    <string name="msg_pdf_link_empty">PDF link not found.please contact admin</string>
    <string name="msg_leave_applied">Your Leave has been successfully applied</string>
    <string name="lbl_co_one_half_day">One And Half Days</string>
    <string name="lbl_co_two">Two Days</string>
    <string name="lbl_punching_slip_shift">Shift</string>
    <string name="lbl_reject_reson">Reason for rejection : </string>
    <string name="sorry_we_not_found_leave_balance">Sorry!We not unable to find your leave balance.</string>
</resources>
