<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="slip"
            type="com.gipl.notifyme.ui.punchingslip.PunchingSlipViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="@dimen/footer_img_height"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg_initial_footer" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/lbl_punching_slip_date"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_from"
            style="@style/TextViewCalender"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/lbl_spinner"
            style="@style/lblEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Shift"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_from"
            app:layout_constraintTop_toBottomOf="@id/tv_from" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lbl_spinner"
            app:layout_constraintTop_toBottomOf="@+id/lbl_spinner" />

        <TextView
            android:id="@+id/tv_shift_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_alt_regular"
            android:text="@{slip.shiftError}"
            android:textColor="@color/edit_text_error"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:text="sdadasd" />

        <TextView

            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/lbl_miss_punch"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/tv_shift_error" />

        <LinearLayout
            android:id="@+id/ll_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <CheckBox
                android:id="@+id/cb_in"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/cb_in_time" />

            <TextView
                android:id="@+id/tv_in_time"
                style="@style/TextViewTime"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:enabled="@{cbIn.checked}"
                android:text=""
                android:hint="@string/cb_in_time"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/ll_in">

            <CheckBox
                android:id="@+id/cb_out"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/cb_out_time" />

            <TextView
                android:id="@+id/tv_out_time"
                style="@style/TextViewTime"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:enabled="@{cbOut.checked}"
                android:text=""
                android:hint="@string/cb_out_time"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_apply"
            style="@style/buttonStyleBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_lbl_submit_punching_slip"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>