<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="overtime"
            type="com.gipl.swayam.ui.addovertime.AddOverTimeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="@dimen/footer_img_height"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg_initial_footer" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/lbl_overtime_date"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_from"
            style="@style/TextViewCalender"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <LinearLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_from"
            app:layout_constraintTop_toBottomOf="@+id/tv_from">

            <TextView
                android:id="@+id/textView6"
                style="@style/lblEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set over time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextPrimaryBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_hours" />

                <TextView
                    style="@style/TextPrimaryBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_min" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/np_hr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/np_min"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1" />
            </LinearLayout>

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:id="@+id/tiet_ot_hr"-->
<!--                style="@style/Widget.AppCompat.EditText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="@color/colorPrimary"-->
<!--                android:drawablePadding="@dimen/_10sdp"-->
<!--                android:fontFamily="@font/proxima_nova_regular"-->
<!--                android:hint="@string/hint_over_time"-->
<!--                android:imeOptions="actionDone"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:maxLength="5"-->
<!--                android:paddingVertical="@dimen/_10sdp"-->
<!--                android:singleLine="true"-->
<!--                android:text="@={overtime.otHours}"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:visibility="gone" />-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:text="@{overtime.otHoursError}"
                android:textColor="@color/edit_text_error"
                android:textSize="@dimen/edit_text_error"
                tools:text="Wrong employee id" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_overtime_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_from"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <TextView
                style="@style/lblEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/lbl_overtime_reason" />

            <Spinner
                android:id="@+id/spinner_reason"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_co_for"
                app:layout_constraintTop_toBottomOf="@+id/tv_co_reason" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tiet_overtime_reason"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/proxima_nova_regular"
                android:hint="@string/hint_ot_reason"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:maxLength="120"
                android:inputType="text"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@={overtime.otReason}"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:text="@{overtime.otReasonError}"
                android:textColor="@color/edit_text_error"
                android:textSize="@dimen/edit_text_error"
                tools:text="Wrong employee id" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_overtime"
            style="@style/buttonStyleBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_lbl_over_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>